SERVER-33812 OplogFetcher always uses an afterOpTime read concern

This avoids issues with the oplog query being rejected in mixed version
clusters when the sync source is not fully upgraded to 3.6.

(cherry picked from commit 46e2583c36856e0d377fcb35f2208a0ac516f031)